# gpu-pnr

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: README.md  architecture.md  handoff-discipline.md  phase32_spike.md  results.md  roadmap.md
docs/adr/: 0000-template.md  0001-pytorch-mps-host.md  0002-scan-based-sweeps.md  0003-async-convergence-check.md  0004-cpu-backtrace.md  0005-mask-based-segmented-scan.md  0006-sequential-via-relax.md  0007-hpwl-ascending-net-ordering.md  0008-defer-route-nets-batched.md  0009-per-net-grids.md  README.md
docs/handoffs/: _template.md  preferred-direction-handoff.md
docs/plans/: README.md  _template.md  phase3-detailed-routing.md
docs/spikes/: README.md  _template.md  phase32-hazard3-real-fixture.md
scripts/: _hazard3_io.py  bench_ordering.py  bench_scaling.py  bench_sweep_sharing.py  demo.py  demo_multinet.py  spike_route_many_nets.py  spike_route_one_net.py
src/gpu_pnr/: __init__.py  baseline.py  ordering.py  router.py  sweep.py
tests/: test_hazard3_io.py  test_ordering.py  test_router.py  test_router_3d.py  test_sweep.py  test_sweep_3d.py
